navbar fixes with proper alignment

--- a/assets/about.css
+++ b/assets/about.css
@@ -215,6 +215,7 @@ small {
     #menuList {
         overflow: hidden;
         transition: 0.5s;
+        top: 20%
     }
 
     .container-box {
